feat: Labels seems to work
FIXME: Find why the JMP instruction is passing the right amount

--- a/teste.vm
+++ b/teste.vm
@@ -1,8 +1,10 @@
-.start:
+.start
     PSH #05
     LDA
+.loop
     SUB #01
-    JNZ start
-.start:
     OUT
+    JNZ loop
+    JMP end
+.end
     HLT
